# Med-Chatbot

./: Dockerfile  Jenkinsfile  pyproject.toml  setup.py
AI Anime Recommander/: requirements.txt  setup.py
app/components/: data_loader.py  embeddings.py  llm.py  pdf_loader.py  retriever.py  vector_store.py
app/config/: config.py
app/templates/: index.html
