[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RAG-Medical-Chatbot"
version = "0.1"
description = "A medical chatbot using RAG architecture."
authors = [
    { name = "Aniruddh Tonpewar" }
]
readme = "README.md"
requires-python = ">=3.7"
